corrected checkbox alignment

--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -34,7 +34,7 @@
   align-items: center;
   position: relative;
   top: -13px;
-  left: -28px;
+  left: -39px;
   margin-top: 6px;
 }
 
